# xtweet

./: .articles_store.json  .env  .gitignore  Madhav.json  Nishant.json  README.md  bot.py  hot.py  keep_alive.py  maal.json  main.py  pyproject.toml  requirements.txt  skeleton.py  users.py  utils.py
docs/: todo.md
static/: logs.css
templates/: logs.html
tmp/: maal.json  user.json
utils/: __init__.py  bot_utils.py  hot.py  users.py
