[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Madhav Kumar <Madhavampire@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
flask = "^3.0.0"
openai = "^0.28.1"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
telebot = "^0.0.5"
bs4 = "^0.0.1"
utils = "^1.0.1"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"